--- a/plugin_env/tmux.conf
+++ b/plugin_env/tmux.conf
@@ -1,2 +1,5 @@
 set -g mode-keys vi
+set -g mouse on
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
