--- a/plugin_env/tmux.conf
+++ b/plugin_env/tmux.conf
@@ -1,5 +1,6 @@
 set -g mode-keys vi
 set -g mouse on
+set -g clock-mode-style 12
 set -g default-terminal "xterm-256color"
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 if-shell "test -f ~/.tmux-status.conf" "source ~/.tmux-status.conf"
